fix: update button translation key and remove z-index from header

--- a/src/pages/Cart/style.scss
+++ b/src/pages/Cart/style.scss
@@ -10,7 +10,7 @@
   }
 
   &__header {
-    @apply flex items-center justify-between fixed top-0 p-[12px] left-1/2 w-full max-w-[1140px] bg-[#F1F2F3] z-10 transform -translate-x-1/2;
+    @apply flex items-center justify-between fixed top-0 p-[12px] left-1/2 w-full max-w-[1140px] bg-[#F1F2F3] transform -translate-x-1/2;
 
     h3 {
       @apply font-semibold text-[24px];
